# Small_Project_for_Life_Working

./: README.md  sqldelete.c  sqllink.c  sqlselects.c  sqlupdate.c
20161109/Indicator/: Indicator.ino
20161109/script/: account.py
20161114/: README.md  picture.py
20161121/backdoor/: backdoor.ino
20161122/FastADC_FFT/: FastADC_FFT.ino
20161122/Sin_FFT/: Sin_FFT.ino
20170213/: search_index.json
20170626/Arduino_music/: Arduino_music.ino
20170626/libraries/LEDMatrix/: LEDMatrix.cpp  LEDMatrix.h
20170801/: cjson.c  cjson.h
20170801/cjson_test/: cjson_test.ino
20170808/: sqlstmt.c
20170815/: client.c  server.c
20170822/: main.c
20170831/: main.c
20171107/: mqueue_ipc.c  mqueue_system.c
20180208/: list.c  list.h  main.c  makefile
20180320queue/: Makefile
20180320queue/examples/: Makefile  simple.c  simple.out
20180320queue/src/: queue.c  queue.h
20180720ringbuffer/: main.c  makefile  ringbuffer.c  ringbuffer.h
20180727sem-sig-test/: Makefile  main.c  sem.c  sem.h
20180731threadpoll-test/: main.c  threadpoll.c  threadpoll.h
20181212ntp/: ntp.c
20210204_shell_test/: fetch_av_reboot.sh  vio_service_reboot.sh
20210204_shell_test/sign/: imi_sign.sh  sign  sign_gen_key  sign_verify
20210204_shell_test/sign/ipcxxx/: aes.key  eddsa.pkey  eddsa.pkey.c  eddsa.skey
auto_imi_db_bin/: Makefile.am  Makefile.in  README.md  configure.ac  factory.txt  main.c  run.ini  test.ini
auto_imi_db_bin/src/: imi_db_mi.c  imi_db_mi.h  miio_timer.c  miio_timer.h
